--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "homepage": "https://github.com/Raymond-Cox/react-boilerplate#readme",
     "dependencies": {
+        "@tanstack/react-router": "^0.0.1-beta.38",
         "axios": "0.27.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
