--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ permissions:
 
 jobs:
     Deploy:
-        runs-on: ubuntu-latest
+        # pinned to 20.04 due to an issue with Parcel + new ubuntu version + lightningcss
+        # see: https://github.com/parcel-bundler/lightningcss/issues/335
+        runs-on: ubuntu-20.04
         steps:
             - uses: actions/checkout@v3
               with:
@@ -27,7 +29,7 @@ jobs:
                   node-version: 16.x
 
             - name: Install Packages
-              run: npm ci --ignore-scripts
+              run: npm ci
 
             - name: Audit
               run: npm audit --audit-level=high
