--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -12,7 +12,9 @@ env:
 
 jobs:
     Test_And_Audit:
-        runs-on: ubuntu-latest
+        # pinned to 20.04 due to an issue with Parcel + new ubuntu version + lightningcss
+        # see: https://github.com/parcel-bundler/lightningcss/issues/335
+        runs-on: ubuntu-20.04
         steps:
             - uses: actions/checkout@v3
               with:
