--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -26,7 +26,7 @@ jobs:
                   node-version: 16.x
 
             - name: Install Packages
-              run: npm ci
+              run: npm install
 
             - name: Audit
               run: npm audit --audit-level=high
