testing can use ubuntu-latest again

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -13,8 +13,8 @@ env:
 jobs:
     Test_And_Audit:
         # pinned to 20.04 due to an issue with Parcel + new ubuntu version + lightningcss
-        # see: https://github.com/parcel-bundler/lightningcss/issues/335
-        runs-on: ubuntu-20.04
+        # see: https://github.com/parcel-bundler/lightningcss/issues/335#issuecomment-1309800954
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
               with:
@@ -25,6 +25,8 @@ jobs:
               with:
                   node-version: 16.x
 
+            # goofy wacky fix to get ubuntu across the finish line
+            # see: https://github.com/parcel-bundler/lightningcss/issues/335#issuecomment-1309800954
             - name: Install Packages
               run: npm install lightningcss
 
