Tests, docs, fixes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectKey=Two-Boys-and-a-Dream_vg-web
 sonar.language=js
 
 # Exclusions
-sonar.exclusions=**/__tests__/*.test.js,jest.config.js
+sonar.exclusions=**/__tests__/*.test.js,jest.config.js,__mocks__/*.js
 sonar.coverage.exclusions=src/index.js
 
 # Report paths
