--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -28,8 +28,8 @@ jobs:
             - name: Install Packages
               run: npm install lightningcss
 
-            - name: Audit
-              run: npm audit --audit-level=high
+            # - name: Audit
+            #   run: npm audit --audit-level=high
 
             - name: Formatting
               run: npm run pretty-check
