Finished component work + tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.language=js
 
 # Exclusions
 sonar.exclusions=**/__tests__/*.test.js,jest.config.js,__mocks__/*.js
-sonar.coverage.exclusions=src/index.js
+sonar.coverage.exclusions=src/index.js,src/utils/testUtils.js
 
 # Report paths
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
