Added .env file creation to GH action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,10 @@ jobs:
             - name: SonarCloud Scan
               uses: SonarSource/sonarcloud-github-action@master
 
+            - name: Create env file
+              run: |
+                  echo "${{ secrets.ENV_FILE_PROD }}" > .env
+
             - name: Build 🔧
               run: npm run build
 
