--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -43,5 +43,9 @@ jobs:
             - name: SonarCloud Scan
               uses: SonarSource/sonarcloud-github-action@master
 
+            - name: Create env file
+              run: |
+                  echo "${{ secrets.ENV_FILE_DEV }}" > .env
+
             - name: Build
               run: npm run build
