--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,14 @@
         "eslint-config-standard",
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
+        "plugin:@tanstack/eslint-plugin-query/recommended",
         "prettier"
     ],
     "overrides": [
         {
             "files": ["**/*.test.js"],
             "env": { "jest/globals": true },
-            "plugins": ["jest"],
+            "plugins": ["jest", "@tanstack/query"],
             "extends": ["plugin:jest/recommended"]
         }
     ],
