--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -8,9 +8,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: monry/actions-add-issue-to-project@v2
+              id: add-issue-to-project # requires `id` to refer output values with after steps
               with:
                   # Personal Access Token that with `repo`, `project`, `org:read` and `org:write` are granted.
                   github-token: ${{ secrets.GH_TOKEN }}
                   project-owner: 'Two-Boys-and-a-Dream'
                   project-number: 2
                   issue-id: ${{ github.event.issue.node_id }}
+            - run: |
+                  echo '${{ steps.add-issue-to-project.outputs.added-project-item-id }}'
