--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -12,4 +12,4 @@ jobs:
             - uses: actions/add-to-project@v0.4.0
               with:
                   project-url: https://github.com/orgs/Two-Boys-and-a-Dream/projects/2
-                  github-token: ${{ secrets.GH_TOKEN }}
+                  github-token: ${{ secrets.TBAAD_ORG_PAT }}
