--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.2",
-        "react-router-dom": "^6.6.1"
+        "react-router-dom": "^6.6.1",
+        "sass": "^1.57.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.5",
         "@babel/preset-react": "^7.18.6",
         "@parcel/babel-plugin-transform-runtime": "^2.8.1",
         "@parcel/babel-preset-env": "^2.8.1",
+        "@parcel/transformer-sass": "^2.8.2",
         "@tanstack/eslint-plugin-query": "^4.20.8",
         "@testing-library/react": "^13.4.0",
         "@types/jest": "^29.2.4",
