--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.2",
-        "react-router-dom": "^6.6.1",
-        "sass": "^1.57.1"
+        "react-router-dom": "^6.6.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.5",
