--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     },
     "homepage": "https://github.com/Two-Boys-and-a-Dream/vg-web#readme",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "axios": "0.27.2",
+        "luxon": "^3.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.2",
